agenda, lit and practicals added

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 encoding: utf-8
 markdown: redcarpet
-baseurl: /
+baseurl: /smsim-course/
 url: robinlovelace.github.io/smsim-course/
 permalink: /:title/
 ga_tracking_code:
