car data added + health survey processed

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
+
 .Rproj.user
 *.out
 *.log
 *.bbl
 .Rhistory
 .RData
-smsim-course-materials.blg
-smsim-course-materials.aux
-smsim-course-materials.idx
-smsim-course-materials.ilg
-smsim-course-materials.ind
-smsim-course-materials.tex.backup
-smsim-course-materials.tex~
+*.blg
+*.aux
+*.idx
+*.ilg
+*.ind
+*.tex.backup
+*.tex~
