major update following course: trs-integerisation working, integerisation section greatly improved, renamed simple-iterations.R and correction of numerous typos

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+.Rproj.user
+*.out
+*.log
+*.bbl
+*.aux
+*.idx
+*.ilg
+*.ind
+*.tex~
+*.md~
+*.toc
+*.kilepr
+.Rhistory
+.RData
+*.gz
+ggmap*
 _site/
+.Rproj.user
